rewire firebase to aws

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "accessKeyId":"AKIAJ3J372CEH6OCS7LA",
-    "secretAccessKey":"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",
+    "accessKeyId":"AKIAJW5OIGVS5FN4LXUA",
+    "secretAccessKey":"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",
     "region":"ap-northeast-2"
 }
