--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/SunjaeJadenLee/recNodeJSServer#readme",
   "dependencies": {
+    "@firebase/storage": "^0.3.32",
     "aws-sdk": "^2.651.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "expo-server-sdk": "^3.4.0",
     "express": "^4.17.1",
+    "firebase": "^7.14.1",
+    "fs": "0.0.1-security",
     "googleapis": "^48.0.0",
     "md5": "^2.2.1",
     "multer": "^1.4.2",
@@ -33,6 +36,7 @@
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
     "sharp": "^0.25.2",
-    "uuid": "^7.0.3"
+    "uuid": "^7.0.3",
+    "xmlhttprequest": "^1.8.0"
   }
 }
